Fix bug amount textbox is overflowed on swap view
Fix bug amount textbox is overflowed on swap view

--- a/src/assets/scss/commons/input-group.scss
+++ b/src/assets/scss/commons/input-group.scss
@@ -157,6 +157,10 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+
+      &-swap {
+        width: calc(100% - 100px);
+      }
     }
   }
 
